--- a/Frontend/src/app/components/menu/menu.component.html
+++ b/Frontend/src/app/components/menu/menu.component.html
@@ -8,6 +8,6 @@
     <dt class="menu"><a href="#news">Aktualnosci</a></dt>
     <dt class="menu"><a href="#about">Odwiedziny</a></dt>
     <dt class="menu"><a href="#about">Lista zadań</a></dt>
-    <dt class="menu"><a href="#about">Więźniowie</a></dt>
+    <dt class="menu"><a (click)="goToPrisoners()">Więźniowie</a></dt>
   </dl>
 </div>
