empty lines deleted

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -4,4 +4,7 @@
   <div class="site">
     <router-outlet></router-outlet>
   </div>
+  <div class="siteInHandSet">
+    <router-outlet></router-outlet>
+  </div>
 </body>
