--- a/Frontend/src/app/components/content/login/login.component.html
+++ b/Frontend/src/app/components/content/login/login.component.html
@@ -9,5 +9,5 @@
     <input type = "password" #passwordInput (keyup) = "writtenPassword(passwordInput.value)" required placeholder="Hasło">
   </div>
 
-  <button (click) = "Submit()">Zaloguj</button>
+  <button (click) = "submit()">Zaloguj</button>
 </div>
