--- a/Frontend/src/app/app.component.css
+++ b/Frontend/src/app/app.component.css
@@ -1,15 +1,10 @@
 .body{  
+    background-image: url("../assets/images/tlo.jpg") no-repeat center center fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-position: center center;
+    color: black;
     font-weight: 400;
-    width: 85%;
-    margin-left: auto;
-    margin-right: auto;
-}
-h1,h2{
-    margin: 0;
-    padding:1.5%;
-}
-.site{
-    float: right;
-    width:82%;
-    background-color: #999999;
 }
