--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,10 +1,15 @@
-<body class="body">
-  <app-header></app-header>
-  <app-menu></app-menu>
-  <div class="site">
-    <router-outlet></router-outlet>
+<div class="container-fluid bg-logo">
+  <div class="row">
+    <div class="col-12 px-0 pb-1">
+      <app-header></app-header>
+    </div>
   </div>
-  <div class="siteInHandSet">
-    <router-outlet></router-outlet>
+  <div class="row">
+    <div class="col-md-2 text-white px-1">
+      <app-menu></app-menu>
+    </div>
+    <div class="col-md-10 bg-content-light px-0 text-black">
+      <router-outlet></router-outlet>
+    </div>
   </div>
-</body>
+</div>
