--- a/Frontend/src/app/components/content/site-header/site-header.component.html
+++ b/Frontend/src/app/components/content/site-header/site-header.component.html
@@ -1,3 +1,3 @@
-<header class="siteheader">
-    <h2>{{childMessage}}</h2>
+<header class="bg-menu-light text-center text-white py-2">
+    <h2 class="mb-1">{{childMessage}}</h2>
 </header>
