--- a/Frontend/src/app/components/menu/menu.component.html
+++ b/Frontend/src/app/components/menu/menu.component.html
@@ -1,13 +1,12 @@
-<div class="leftmenu">
-  <header class="arch_header">
-    <h2>Menu</h2>
-  </header>
-  <dl class="menu">
-    <dt class="menu"><a href="#zaloguj">Zaloguj</a></dt>
-    <dt class="menu"><a href="#main">Strona główna</a></dt>
-    <dt class="menu"><a href="#news">Aktualnosci</a></dt>
-    <dt class="menu"><a href="#about">Odwiedziny</a></dt>
-    <dt class="menu"><a href="#about">Lista zadań</a></dt>
-    <dt class="menu"><a (click)="goToPrisoners()">Więźniowie</a></dt>
-  </dl>
-</div>
+<header class="bg-menu-dark text-center py-2">
+  <h2 class="mb-1">Menu</h2>
+</header>
+
+<dl class="bg-menu-light">
+  <dt class="menu"><a href="#zaloguj">Zaloguj</a></dt>
+  <dt class="menu"><a href="#main">Strona główna</a></dt>
+  <dt class="menu"><a href="#news">Aktualnosci</a></dt>
+  <dt class="menu"><a href="#about">Odwiedziny</a></dt>
+  <dt class="menu"><a href="#about">Lista zadań</a></dt>
+  <dt class="menu"><a (click)="goToPrisoners()">Więźniowie</a></dt>
+</dl>
