--- a/Frontend/src/app/components/content/register/register.component.html
+++ b/Frontend/src/app/components/content/register/register.component.html
@@ -1,14 +1,20 @@
-<app-site-header [childMessage]="headerOfSite"></app-site-header>
-
-<!-- niech go chuj zajebie z tą siatką || do zmiany style-->
-<div style="margin: 0 auto; width: 300px; padding-left: 200px; margin-top: 5%">
-    <div>
-        <input type="text" #loginInput (keyup)="writtenLogin(loginInput.value)" placeholder="Login" required>
+<header>
+    <app-site-header [childMessage]="headerOfSite"></app-site-header>
+</header>
+<div class="container-fluid">
+    <div class="row mt-5">
+        <div class="col-md-4 offset-md-4 mt-5">
+            <div class="form-group">
+                <input class="form-control form-control-lg" type="text" #loginInput (keyup)="writtenLogin(loginInput.value)" placeholder="Login" required>
+            </div>
+            <div class="form-group">
+                <input class="form-control form-control-lg" type="password" #passwordInput (keyup)="writtenPassword(passwordInput.value)" placeholder="Hasło" required>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-block btn-lg text-white submit" (click)="submit()">Zarejestruj się</button>
+                <div class="error mt-3" *ngIf="anyErrors">Wystąpił błąd, przepraszamy za utrudnienia.</div>
+                <div class="success mt-3" *ngIf="finished">Rejestracja zakończona powodzeniem, dziękujemy.</div>
+            </div>
+        </div>
     </div>
-    <div>
-        <input type="password" #passwordInput (keyup)="writtenPassword(passwordInput.value)" placeholder="Hasło"  required>
-    </div>
-    <button (click)="submit()">Zarejestruj się</button>
-    <div class="error" *ngIf="anyErrors">Wystąpił błąd, przepraszamy za utrudnienia.</div>
-    <div class="success" *ngIf="finished">Rejestracja zakończona powodzeniem, dziękujemy.</div>
 </div>
