--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -6,7 +6,7 @@
       </header>
     </div>
   </div>
-  <div class="row pb-1">
+  <div class="row pb-1 pr-1">
     <div class="col-md-2 text-white px-1">
       <nav>
         <app-menu></app-menu>
@@ -16,6 +16,13 @@
       <article>
         <router-outlet></router-outlet>
       </article>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 p-1">
+      <footer>
+        <app-footer></app-footer>
+      </footer>
     </div>
   </div>
 </div>
