--- a/Frontend/src/app/components/content/login/login.component.html
+++ b/Frontend/src/app/components/content/login/login.component.html
@@ -11,7 +11,7 @@
               <input class="form-control form-control-lg" type="password" #passwordInput (keyup)="writtenPassword(passwordInput.value)" placeholder="Hasło" required>
             </div>
             <div class="form-group">
-                <button class="btn btn-block btn-lg text-white submit" (click)="submit()">Zaloguj</button>
+                <button class="btn btn-block btn-lg text-white submit" (click)="submit()">Zaloguj się</button>
                 <div class="error mt-3" *ngIf="anyErrors">Wystąpił błąd, przepraszamy za utrudnienia.</div>
                 <div class="success mt-3" *ngIf="finished">Rejestracja zakończona powodzeniem, dziękujemy.</div>
             </div>
