--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -11,6 +11,7 @@
       <nav>
         <app-menu></app-menu>
       </nav>
+      <div class="bg-menu-light"></div>
     </div>
     <div class="col-md-10 bg-content-light px-0 text-black">
       <article>
