--- a/Frontend/src/app/components/content/login/login.component.html
+++ b/Frontend/src/app/components/content/login/login.component.html
@@ -13,7 +13,7 @@
             <div class="form-group">
                 <button class="btn btn-block btn-lg text-white submit" (click)="submit()">Zaloguj się</button>
                 <div class="error mt-3" *ngIf="anyErrors">Wystąpił błąd, przepraszamy za utrudnienia.</div>
-                <div class="success mt-3" *ngIf="finished">Rejestracja zakończona powodzeniem, dziękujemy.</div>
+                <div class="success mt-3" *ngIf="finished">Logowanie zakończone powodzeniem.</div>
             </div>
         </div>
     </div>
