--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -23,6 +23,50 @@ body {
     .service-snackbar { width: 100%; }
 }
 
+/* INPUT && BUTTON */
+input[type=text],
+input[type=password] {
+    background-color: #efefef;
+    font-size: 20px;
+    font-weight: 700;
+    color: #202F3E;
+    border: 2.4px solid #3f3f3f;
+}
+
+input[type=text]:focus,
+input[type=password]:focus {
+    color: #202F3E;
+    box-shadow: 0 0 10px 2px rgba(204,204,204,0.9);
+    border: 2.4px solid #202F3E;
+}
+
+button.submit {    
+    background-color: #202F3E;
+    font-size: 25px;
+    font-weight: 700;
+    cursor: pointer;
+    letter-spacing: 2px;
+}
+
+button.submit:hover {
+    background-color: rgb(40, 56, 71);
+}
+
+.error {
+    color: red;
+    font-size: 18px;
+    font-weight: 700;
+    text-align: center;
+}
+
+.success {
+    color: green;
+    font-size: 18px;
+    font-weight: 700;
+    text-align: center;
+}
+
+/* OWN SINGLE-CLASSES */
 .bg-menu-dark {
     background-color: #202F3E;
 }
@@ -39,10 +83,6 @@ body {
     background-color: rgba(29, 29, 29, 0.5);
 }
 
-/* .bg-gutters {
-    background-color: #999999; 
-} */
-
 .bg-logo {
     background-color: #3f3f3f;
 }
@@ -50,3 +90,5 @@ body {
 .text-black {
     color: black;
 }
+
+/* ///// */
