Added prisoner model, service and register component

--- a/Frontend/src/app/components/menu/menu.component.html
+++ b/Frontend/src/app/components/menu/menu.component.html
@@ -21,4 +21,7 @@
   <div class="m-1">
     <a class="menu-item py-2" [routerLink]="'/prisoners'">Więźniowie</a>
   </div>
+  <div class="m-1">
+    <a class="menu-item py-2" [routerLink]="'/prisoners/register'">(dropdown)pris-register</a>
+  </div>
 </div>
