--- a/Frontend/src/app/components/content/login/login.component.html
+++ b/Frontend/src/app/components/content/login/login.component.html
@@ -3,7 +3,7 @@
 </header>
 <div class="container-fluid">
     <div class="row mt-5">
-        <div class="col-md-4 offset-md-4 mt-5">
+        <div class="col-md-4 offset-md-4 mt-5 form-background">
             <div class="form-group">
                 <input class="form-control form-control-lg" type="text" #loginInput (keyup)="writtenLogin(loginInput.value)" placeholder="Login" required>
             </div>
