--- a/Frontend/src/app/components/content/prisoners/prisoner/prisoner.component.html
+++ b/Frontend/src/app/components/content/prisoners/prisoner/prisoner.component.html
@@ -1,35 +1,29 @@
 <header>
     <app-site-header [childMessage]="headerOfSite"></app-site-header>
 </header>
-<div class="container-fluid">
+<div class="container-fluid m-5">
   <div class="row">
-    <div class="col-md-4 offset-md-4">
+    <div class="col-md-4 offset-md-4 form-background">
       <form #form="ngForm" (submit)="onSubmit(form)" autocomplete="off">
-        <input type="hidden" name="id" #id="ngModel" [(ngModel)]="service.formData.id">
         <div class="form-group mb-2 mt-3">
           <label>IMIĘ</label>
-          <input name="first_name" #first_name="ngModel" [(ngModel)]="service.formData.first_name" class="form-control" required>
-          <div class="validation-error" *ngIf="first_name.invalid && first_name.touched">To pole jest wymagane.</div>
+          <input name="firstName" #firstName="ngModel" [(ngModel)]="service.formData.firstName" class="form-control" required>
+          <div class="validation-error" *ngIf="firstName.invalid && firstName.touched">To pole jest wymagane.</div>
         </div>
         <div class="form-group mb-2">
           <label>NAZWISKO</label>
-          <input name="last_name" #last_name="ngModel" [(ngModel)]="service.formData.last_name" class="form-control" required>
-          <div class="validation-error" *ngIf="last_name.invalid && last_name.touched">To pole jest wymagane.</div>
-        </div>
-        <div class="form-group mb-2">
-          <label class="label">DATA PRZYJĘCIA</label>
-          <input name="join_date" #join_date="ngModel" [(ngModel)]="service.formData.join_date" class="form-control" required type="date">
-          <div class="validation-error" *ngIf="join_date.invalid && join_date.touched">To pole jest wymagane.</div>
+          <input name="lastName" #lastName="ngModel" [(ngModel)]="service.formData.lastName" class="form-control" required>
+          <div class="validation-error" *ngIf="lastName.invalid && lastName.touched">To pole jest wymagane.</div>
         </div>
         <div class="form-group mb-2">
           <label>DATA URODZENIA</label>
-          <input name="date_of_birdth" #date_of_birdth="ngModel" [(ngModel)]="service.formData.date_of_birdth" class="form-control" required type="date">
-          <div class="validation-error" *ngIf="date_of_birdth.invalid && date_of_birdth.touched">To pole jest wymagane.</div>
+          <input name="dateOfBirth" #dateOfBirth="ngModel" [(ngModel)]="service.formData.dateOfBirth" class="form-control" required type="date">
+          <div class="validation-error" *ngIf="dateOfBirth.invalid && dateOfBirth.touched">To pole jest wymagane.</div>
         </div>
         <div class="form-group mb-4">
           <label>NR CELI</label>
-          <input name="cell_id" #cell_id="ngModel" [(ngModel)]="service.formData.cell_id" class="form-control" required type="number" pattern="[0-9]{1}" min=0>
-          <div class="validation-error" *ngIf="cell_id.invalid && cell_id.touched">To pole jest wymagane.</div>
+          <input name="cellId" #cellId="ngModel" [(ngModel)]="service.formData.cellId" class="form-control" required type="number" pattern="[0-9]{1}" min=0>
+          <div class="validation-error" *ngIf="cellId.invalid && cellId.touched">To pole jest wymagane.</div>
         </div>
         <div class="form-group">
           <button type="submit" [disabled]="form.invalid" class="btn btn-block text-white submit-sm">Dodaj więźnia</button>
