--- a/Frontend/src/app/components/content/prisoners/prisoners-list/prisoners-list.component.html
+++ b/Frontend/src/app/components/content/prisoners/prisoners-list/prisoners-list.component.html
@@ -1,19 +1,21 @@
 <app-site-header [childMessage]="headerOfSite"></app-site-header>
-  <div  *ngFor="let prisoner of prisoners">
-    <article class="post">
-      <header>
-        <h2 class="post_title">{{prisoner}}</h2>
-      </header>
-      <img class="post_img" src="assets/images/nico.jpg">
-      <div class="post_text">
-        <p>Opis:</p>
-        <p>Więzień osadzony jest w sali 201, sprawowanie dobre, srednia ocena...</p>
+<div *ngFor="let prisoner of prisoners">
+  <article class="post">
+    <header>
+      <h2 class="post_title">{{prisoner.firstName}} {{prisoner.lastName}}</h2>
+    </header>
+    <img class="post_img" src="assets/images/nico.jpg">
+    <div class="post_text">
+      <p>Data urodzenia: {{prisoner.dateOfBirth}}</p>
+      <p>Data rejestracji: {{prisoner.joinDate}}</p>
+      <p>Opis:</p>
+      <p>Więzień osadzony jest w sali {{prisoner.cellId}}, sprawowanie dobre, srednia ocena...</p>
 
-      </div>
-      <footer class="post_date">
-        <button>Oceń</button>
-        <button>Szczególy</button>
-        <button>Edytuj</button>
-      </footer>
-    </article>
-  </div>
+    </div>
+    <footer class="post_date">
+      <button mat-button>Oceń</button>
+      <button mat-button>Szczególy</button>
+      <button mat-button>Edytuj</button>
+    </footer>
+  </article>
+</div>
