--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -115,3 +115,12 @@ div.validation-error {
 input[type="number"] {
     -moz-appearance: textfield;
 }
+
+.form-background {
+  background: #3F3F3F;
+  box-shadow: #3F3F3F 0px 0px 10px;
+  padding: 20px;
+  color: white;
+  margin: 20px auto;
+  margin-bottom: 100px;
+}
