--- a/Frontend/src/app/components/content/prisoners/prisoner-details/prisoner-details.component.html
+++ b/Frontend/src/app/components/content/prisoners/prisoner-details/prisoner-details.component.html
@@ -8,7 +8,7 @@
       <img class="size" src="assets/images/nico.jpg" />
     </div>
     <div class="col-md-4 offset-md-4 bg-content-mid text-center pb-3">
-      <h5>Data urodzenia: {{prisoner.DateOfBirdth}}</h5>
+      <h5>Data urodzenia: {{prisoner.DateOfBirth}}</h5>
       <h5>Data rejestracji: {{prisoner.JoinDate}}</h5>
       <h6 class="my-3">Więzień osadzony jest w sali {{prisoner.CellId}}, sprawowanie dobre, srednia ocena...</h6>
       <div class="row py-1 no-gutters ">
