--- a/Frontend/src/app/components/header/header.component.html
+++ b/Frontend/src/app/components/header/header.component.html
@@ -1,3 +1,3 @@
 <header class="bg-logo text-center">
-  <img class="headerImg img-fluid" src="assets/images/jail-long.jpg">
+  <img class="headerImg img-fluid" src="assets/images/jailLogo.png">
 </header>
