--- a/Frontend/src/app/components/menu/menu.component.css
+++ b/Frontend/src/app/components/menu/menu.component.css
@@ -8,8 +8,10 @@
     text-decoration: none;
     cursor: pointer;
     outline: none;
+    background: linear-gradient(to right, rgba(32,47,62,1) 0%,rgba(0,0,0,0) 100%);
+    transition: background 1s ease;
 }
 
 .menu-item:hover {
-    background-color:rgb(5, 5, 5);
+  background: rgba(32,47,62,1);
 }
