--- a/Frontend/src/app/components/menu/menu.component.html
+++ b/Frontend/src/app/components/menu/menu.component.html
@@ -3,31 +3,13 @@
 </header>
 
 <div class="d-flex flex-column align-items-stretch bg-menu-light">
-  <div class="m-1" *ngIf="!login">
-    <a class="menu-item py-2" [routerLink]="'/login'">Zaloguj</a>
-  </div>
-  <div class="m-1" *ngIf="!login">
-    <a class="menu-item py-2" [routerLink]="'/register'">Zarejestruj</a>
-  </div>
-  <div class="m-1" *ngIf="login">
-    <a class="menu-item py-2" (click)="logout()">Wyloguj</a>
-  </div>
-  <div class="m-1">
+    <a class="menu-item py-2" *ngIf="!login" [routerLink]="'/login'">Zaloguj</a>
+    <a class="menu-item py-2" *ngIf="!login" [routerLink]="'/register'">Zarejestruj</a>
+    <a class="menu-item py-2" *ngIf="login" (click)="logout()">Wyloguj</a>
     <a class="menu-item py-2" [routerLink]="'/'">Strona główna</a>
-  </div>
-  <div class="m-1">
     <a class="menu-item py-2" [routerLink]="'/'">Aktualności</a>
-  </div>
-  <div class="m-1">
     <a class="menu-item py-2" [routerLink]="'/'">Odwiedziny</a>
-  </div>
-  <div class="m-1">
     <a class="menu-item py-2" [routerLink]="'/'">Lista zadań</a>
-  </div>
-  <div class="m-1">
     <a class="menu-item py-2" [routerLink]="'/prisoners'">Więźniowie</a>
-  </div>
-  <div class="m-1">
     <a class="menu-item py-2" [routerLink]="'/prisoners/register'">Zarejestruj więźnia</a>
-  </div>
 </div>
