--- a/Frontend/src/app/components/content/prisoners/prisoner-details/prisoner-details.component.html
+++ b/Frontend/src/app/components/content/prisoners/prisoner-details/prisoner-details.component.html
@@ -13,7 +13,7 @@
       <h6 class="my-3">Więzień osadzony jest w sali {{prisoner.CellId}}, sprawowanie dobre, srednia ocena...</h6>
       <div class="row py-1 no-gutters ">
         <div class="col-md-6 pr-1">
-          <button mat-button class="btn btn-block text-white submit py-1">Edytuj</button>
+          <button mat-button [routerLink]="['/prisoners/edit/', prisoner.id]" class="btn btn-block text-white submit py-1">Edytuj</button>
         </div>
         <div class="col-md-6 pl-1">
           <button mat-button [routerLink]="'/prisoners'" class="btn btn-block text-white submit py-1">Wróć</button>
