--- a/Frontend/src/app/components/menu/menu.component.html
+++ b/Frontend/src/app/components/menu/menu.component.html
@@ -30,4 +30,7 @@
   <div class="m-1">
     <a class="menu-item py-2" [routerLink]="'/prisoners/register'">Zarejestruj więźnia</a>
   </div>
+  <div class="m-1">
+    <a class="menu-item py-2" [routerLink]="'execution/reservation'">Zarezerwuj egzekucję</a>
+  </div>
 </div>
