fix authorization, add auth guard module, add loading effect in login

--- a/Frontend/src/app/components/content/login/login.component.html
+++ b/Frontend/src/app/components/content/login/login.component.html
@@ -15,6 +15,7 @@
                 <div class="error mt-3" *ngIf="anyErrors">Nieprawidłowy login lub hasło.</div>
                 <div class="success mt-3" *ngIf="finished" [routerLink]="['/home/']"></div>
             </div>
+          <mat-progress-bar mode="indeterminate" *ngIf="!finished"></mat-progress-bar>
         </div>
     </div>
 </div>
