--- a/Frontend/src/app/components/content/prisoners/prisoner/prisoner.component.html
+++ b/Frontend/src/app/components/content/prisoners/prisoner/prisoner.component.html
@@ -12,8 +12,8 @@
         </div>
         <div class="form-group mb-2">
           <label>NAZWISKO</label>
-          <input name="LirstName" #LirstName="ngModel" [(ngModel)]="service.formData.LirstName" class="form-control" required>
-          <div class="validation-error" *ngIf="LirstName.invalid && LirstName.touched">To pole jest wymagane.</div>
+          <input name="LastName" #LastName="ngModel" [(ngModel)]="service.formData.LastName" class="form-control" required>
+          <div class="validation-error" *ngIf="LastName.invalid && LastName.touched">To pole jest wymagane.</div>
         </div>
         <div class="form-group mb-2">
           <label>DATA URODZENIA</label>
