sick note added

--- a/Frontend/src/app/components/content/prisoners/prisoner-edit/prisoner-edit.component.html
+++ b/Frontend/src/app/components/content/prisoners/prisoner-edit/prisoner-edit.component.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-md-4 offset-md-4 form-background">
       <form #form="ngForm" (submit)="onSubmit(form)" autocomplete="off">
-        <input type="hidden" name="id" #id="ngModel" [(ngModel)]="prisoner.id"> 
+        <input type="hidden" name="id" #id="ngModel" [(ngModel)]="prisoner.id">
         <div class="form-group mb-2 mt-3">
           <label>IMIĘ</label>
           <input name="FirstName" #FirstName="ngModel" [(ngModel)]="prisoner.FirstName" class="form-control" required>
@@ -17,21 +17,25 @@
         </div>
         <div class="form-group mb-2">
           <label>DATA URODZENIA</label>
-          <input name="DateOfBirth" #DateOfBirth="ngModel" [(ngModel)]="prisoner.DateOfBirth" class="form-control" type="date" required>
+          <input name="DateOfBirth" #DateOfBirth="ngModel" [(ngModel)]="prisoner.DateOfBirth" class="form-control"
+            type="date" required>
           <div class="validation-error" *ngIf="DateOfBirth.invalid && DateOfBirth.touched">To pole jest wymagane.</div>
         </div>
         <div class="form-group mb-4">
           <label>NR CELI</label>
-          <input name="CellId" #CellId="ngModel" [(ngModel)]="prisoner.CellId" class="form-control" type="number" pattern="[0-9]{1}" min=0 required>
+          <input name="CellId" #CellId="ngModel" [(ngModel)]="prisoner.CellId" class="form-control" type="number"
+            pattern="[0-9]{1}" min=0 required>
           <div class="validation-error" *ngIf="CellId.invalid && CellId.touched">To pole jest wymagane.</div>
         </div>
         <div class="row py-1 no-gutters">
           <div class="col-md-6 pr-1">
-            <button mat-button type="submit" [disabled]="form.invalid" class="btn btn-block text-white submit py-1">Zatwierdź</button>
+            <button mat-button type="submit" [disabled]="form.invalid"
+              class="btn btn-block text-white submit py-1">Zatwierdź</button>
           </div>
           <div class="col-md-6 pl-1">
-            <button mat-button [routerLink]="['/prisoners/', prisoner.id]" class="btn btn-block text-white submit py-1">Wróć</button>
-          </div>       
+            <button mat-button [routerLink]="['/prisoners/', prisoner.id]"
+              class="btn btn-block text-white submit py-1">Wróć</button>
+          </div>
         </div>
       </form>
     </div>
