--- a/Frontend/src/app/components/content/prisoners/prisoner-sick-note/prisoner-sick-note.component.html
+++ b/Frontend/src/app/components/content/prisoners/prisoner-sick-note/prisoner-sick-note.component.html
@@ -16,9 +16,8 @@
         </div>
         <div class="form-group">
           <label>Powód zwolnienia</label>
-          <textarea name="reason" #reason="ngModel" [(ngModel)]="note" class="form-control" rows="3"
-            required></textarea>
-            <div class="validation-error" *ngIf="reason.invalid && reason.touched">To pole jest wymagane.</div>
+          <textarea name="reason" #reason="ngModel" [(ngModel)]="note" class="form-control" rows="3" 
+          placeholder="Dodatkowa informacja o przyczynie zwolnienia"></textarea>
         </div>
         <div class="form-group">
           <label>Zwolnienie ważne do:</label>
