add blocks and cells, add visualisation blocks, addPrisonerToCell

--- a/Frontend/src/app/components/menu/menu.component.html
+++ b/Frontend/src/app/components/menu/menu.component.html
@@ -12,10 +12,11 @@
   <a class="menu-item py-2" [routerLink]="'/prisoners'">Więźniowie</a>
   <a class="menu-item py-2" [routerLink]="'/prisoners/register'">Zarejestruj więźnia</a>
   <a class="menu-item py-2" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Wystaw
-    </a>
+    Wystaw
+  </a>
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
     <a class="dropdown-item" [routerLink]="'/sick-note'">Zwolnienie lekarskie</a>
     <a class="dropdown-item" href="#">Powiadomienie o zgonie</a>
   </div>
+  <a class="menu-item py-2" [routerLink]="'/block'">Blok więzienny</a>
 </div>
